# corroded-monitor

./: Cargo.toml  LICENSE  README.md  bindings.h  build.rs  program.manifest
LibreHardwareMonitorAPI/: LibreHardwareMonitorAPI.sln
LibreHardwareMonitorAPI/ManagedLibreHardwareMonitor/: HardwareMonitor.cs  ManagedLibreHardwareMonitor.csproj  packages.config
LibreHardwareMonitorAPI/ManagedLibreHardwareMonitor/Properties/: AssemblyInfo.cs
LibreHardwareMonitorAPI/ManagedLibreHardwareMonitorWrapper/: AssemblyInfo.cpp  ManagedLibreHardwareMonitorWrapper.cpp  ManagedLibreHardwareMonitorWrapper.h  ManagedLibreHardwareMonitorWrapper.vcxproj  ManagedLibreHardwareMonitorWrapper.vcxproj.filters  app.aps
src/: config.rs  main.rs
src/system/: cpu.rs  gpu.rs  mod.rs  network.rs  ram.rs  storage.rs
src/ui/: app.rs  chart.rs  mod.rs
src/ui/style/: button.rs  buttons.rs  container.rs  containers.rs  mod.rs  pick_list.rs  scrollable.rs  toggler.rs
src/ui/style/dark/: buttons.rs  containers.rs  mod.rs  pick_list.rs
src/ui/style/light/: buttons.rs  containers.rs  pick_list.rs
