[package]
name = "corroded_monitor"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.81"
reqwest = { version = "0.11.10", default-features = false, features = ["json"] }
tokio = { version = "1.18.2", default-features = false, features = ["rt", "rt-multi-thread", "time"] }
iced = { version = "0.4.2", features=["tokio", "pure"] }
iced_style = "*"
dark-light = "0.2.2"
plotters = { version = "0.3.0", default-features = false, features = ["line_series", "datetime", "deprecated_items", "area_series"]}
plotters-iced = { path = "plotters-iced" }
plotters-backend = "*"
chrono = "0.4.19"
image = { version = "0.24.2", default-features = false, features = ["ico"] }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.3"