[package]
name = "corroded_monitor"
version = "1.0.1"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.81"
tokio = { version = "1.18.2", default-features = false, features = ["rt", "rt-multi-thread", "time", "sync"] }
iced = { version = "0.9.0", features = ["tokio"] }
iced_style = "*"
dark-light = "1.0.0"
plotters = { version = "0.3.0", default-features = false, features = ["line_series", "datetime", "deprecated_items", "area_series"]}
plotters-iced = "0.8.0"
plotters-backend = "0.3.0"
image = { version = "0.24.2", default-features = false, features = ["ico"] }
serde = { version = "1.0.160", features = ["derive"] }
regex = "1.8.1"

[build-dependencies]
embed-resource = "2.1.1"
bindgen = "0.65.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
